# serde-feature-hack

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs
