[package]
name = "serde-feature-hack"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
license = "MIT/Apache-2.0"
description = "A hack to allow having a feature named serde while having serde as a dependency"
repository = "https://gitlab.com/KonradBorowski/serde-feature-hack"
readme = "README.md"
keywords = ["serde", "serialization", "no_std"]
categories = ["encoding", "no-std", "rust-patterns"]

[badges]
gitlab = { repository = "KonradBorowski/serde-feature-hack" }
maintenance = { status = "actively-developed" }

[dependencies.serde]
version = "1.0.75"
default-features = false

[dev-dependencies]
serde_json = "1.0.26"

[features]
default = ["std"]
derive = ["serde/derive"]
std = ["serde/std"]
unstable = ["serde/unstable"]
alloc = ["serde/alloc"]
rc = ["serde/rc"]
