[package]
name = "serde-feature-hack"
version = "0.2.0"
edition = "2018"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
license = "MIT OR Apache-2.0"
description = "A hack to allow having a feature named serde while having serde as a dependency"
repository = "https://gitlab.com/KonradBorowski/serde-feature-hack"
readme = "README.md"
keywords = ["serde", "serialization", "no_std"]
categories = ["encoding", "no-std", "rust-patterns"]

[lib]
name = "serde"

[badges]
gitlab = { repository = "KonradBorowski/serde-feature-hack" }
maintenance = { status = "deprecated" }

[dependencies.real_serde]
version = "1.0.75"
package = "serde"
default-features = false

[dev-dependencies]
serde_json = "1.0.26"

[features]
default = ["std"]
derive = ["real_serde/derive"]
std = ["real_serde/std"]
unstable = ["real_serde/unstable"]
alloc = ["real_serde/alloc"]
rc = ["real_serde/rc"]
